CHANGES IN FLTK 1.1.4

	- Fl_Text_Display didn't draw the outer box in the right
	  dimensions, so it was invisible.
	- Fl_Help_Dialog used the same color for links as for
	  the background, causing links to be invisible on pages
	  without a background color set.


CHANGES IN FLTK 1.1.3

	- Documentation updates.
	- FLTK now ignores KeyRelease events when X11 sends them
	  for repeating keys.
	- FLUID now supports up to two additional qualifiers
	  before a class name (FL_EXPORT, etc.) to aide in
	  developing DLL interfaces for WIN32.
	- Additional NULL checks in Fl_Button,
	  fl_draw_boxtype(), Fl_File_Chooser, and
	  Fl_Window::hotspot().
	- The Fl_Preferences header file needed to FL_EXPORT all
	  of the nested classes for WIN32.
	- Fl_Double_Window couldn't be nested on WIN32. [SF Bug
	  #658219]
	- Fl_Slider didn't call the callback function when the
	  user changed the value using the keyboard and the
	  "when" condition was FL_WHEN_RELEASE. [SF Bug #647072]
	- Lines with less than 2 unique vertices and polygons
	  with less the 3 unique vertices were not drawn
	  properly. [SF Bug #647067]
	- The size_range() values were not honored under MacOS
	  X. [SF Bug #647074]
	- OpenGL windows didn't resize correctly on MacOS X.
          [SF Bug #667855]
	- The menus incorrectly used the overlay visual when one
	  or more menu items contained an image. [SF Bug #653846]
	- Changed some error messages to use Fl::error() instead
	  of fprintf()...
	- Fl_Text_Buffer and Fl_Text_Display used free to free
	  memory that was allocated using the new operator.
	- Tweeked the plastic scheme under MacOSX to better
	  match the colors.
	- The Fl_Image.H always included the x.H header file,
	  which included many system headers that could
	  interfere with normal GUI applications.  It now uses
	  the corresponding based types for the image id and
	  mask to avoid this.
	- The FLUID widget panel wasn't sorted, so keyboard
	  navigation was strange. [SF Bug #647069]